--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,10 @@ h2{
   justify-content: center;
   gap: .5rem;
 }
-article{
+/* article{
   background: none;
   box-shadow: none;
-}
+} */
 
 summary{
   font-size: 1.5rem;
@@ -55,7 +55,9 @@ summary small{
 .bts a{
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: .5rem;
+  min-width: 10rem ;
 }
 
 td{
